<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="4dip">

            <TextView
                android:id="@+id/packageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="4dip"
                android:paddingRight="4dip"
                android:paddingBottom="6dip">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="50dip"
                    android:maxHeight="50dip"
                    android:paddingRight="8dip" />

                <TextView
                    android:id="@+id/classView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/disabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/disabled" />

                <TextView
                    android:id="@+id/system"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/system" />

                <TextView
                    android:id="@+id/debuggable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/debuggable" />

                <TextView
                    android:id="@+id/nocode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nocode" />

                <TextView
                    android:id="@+id/persistent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/persistent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/restart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/restart" />

                    <Button
                        android:id="@+id/info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/info" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/SummaryCategoryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/package_summary_process_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/process"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/SummaryCategoryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/package_summary_uid_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/uid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/SummaryCategoryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/package_summary_task_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/SummaryCategoryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/package_summary_version_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/SummaryCategoryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/package_summary_source_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/SummaryCategoryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/package_summary_data_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/permissions"
                style="@style/SummaryCategoryLayout">

                <TextView
                    style="@style/SummaryCategoryHeader"
                    android:text="@string/package_summary_permissions_label" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/requestedPermissions"
                style="@style/SummaryCategoryLayout">

                <TextView
                    style="@style/SummaryCategoryHeader"
                    android:text="@string/package_summary_requested_permissions_label" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activities"
                style="@style/SummaryCategoryLayout">

                <TextView
                    style="@style/SummaryCategoryHeader"
                    android:text="@string/package_summary_activities_label" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/receivers"
                style="@style/SummaryCategoryLayout">

                <TextView
                    style="@style/SummaryCategoryHeader"
                    android:text="@string/package_summary_receivers_label" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/services"
                style="@style/SummaryCategoryLayout">

                <TextView
                    style="@style/SummaryCategoryHeader"
                    android:text="@string/package_summary_services_label" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/providers"
                style="@style/SummaryCategoryLayout">

                <TextView
                    style="@style/SummaryCategoryHeader"
                    android:text="@string/package_summary_providers_label" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/instrumentation"
                style="@style/SummaryCategoryLayout">

                <TextView
                    style="@style/SummaryCategoryHeader"
                    android:text="@string/package_summary_instrumentation_label" />
            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>

</ScrollView>

